--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,40 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        
+        <!-- csv -->
+        <dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-csv</artifactId>
+		    <version>1.8</version>
+		</dependency>
+		
+		   <!-- excel -->
+		<dependency> 
+		  <groupId>org.apache.poi</groupId>
+		  <artifactId>poi</artifactId> 
+		  <version>5.2.0</version> 
+		</dependency> 
+		<dependency> 
+		  <groupId>org.apache.poi</groupId> 
+		  <artifactId>poi-ooxml</artifactId> 
+		  <version>5.2.0</version> 
+		</dependency>
+		<dependency>
+		  <groupId>org.jxls</groupId>
+		  <artifactId>jxls-jexcel</artifactId>
+		  <version>1.0.9</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.dhatim</groupId>
+		    <artifactId>fastexcel-reader</artifactId>
+		    <version>0.15.3</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.dhatim</groupId>
+		    <artifactId>fastexcel</artifactId>
+		    <version>0.15.3</version>
+		</dependency>
 		
 	</dependencies>
 
