--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.cache.use_second_level_cache=true 
 spring.jpa.properties.hibernate.cache.use_query_cache=true 
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+
+#Datasource
 spring.datasource.url=jdbc:mysql://${DATABASE_HOST:frparccsw}:${DATABASE_PORT:3306}/dashboard?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
 spring.datasource.username=dashboard
 spring.datasource.password=dashboard
