--- a/src/main/resources/application_local.properties
+++ b/src/main/resources/application_local.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.cache.use_query_cache=true
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 
 #Datasource
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/dashboard?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST:frparccsw}:${DATABASE_PORT:3306}/dashboard?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
 spring.datasource.username=dashboard
 spring.datasource.password=dashboard
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
