--- a/pom.xml
+++ b/pom.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.ccsw</groupId>
 	<artifactId>dashboard-server</artifactId>
 	<version>1.0.0</version>
 	<name>dashboard</name>
 	<description>Dashboard Server</description>
-	
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.0.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	
+
 	<properties>
 		<java.version>18</java.version>
 	</properties>
-	
+
 	<dependencies>
 
 		<!-- Database -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>			
+			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -39,11 +40,11 @@
 			<version>8.0.30</version>
 		</dependency>
 
-      <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-cache</artifactId>
-      </dependency>
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
 		<!-- Security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -69,11 +70,11 @@
 		</dependency>
 
 		<dependency>
-		    <groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-ehcache</artifactId>
-		    <version>5.4.9.Final</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+			<version>5.4.9.Final</version>
 		</dependency>
-		
+
 		<!-- Web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -81,10 +82,10 @@
 		</dependency>
 
 		<dependency>
-            <groupId>net.sf.dozer</groupId>
-            <artifactId>dozer</artifactId>
-            <version>5.5.1</version>
-        </dependency>
+			<groupId>net.sf.dozer</groupId>
+			<artifactId>dozer</artifactId>
+			<version>5.5.1</version>
+		</dependency>
 
 		<!-- Testing -->
 		<dependency>
@@ -92,76 +93,63 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-        
-        <!-- csv -->
-        <dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-csv</artifactId>
-		    <version>1.8</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
 		</dependency>
-		
-		
-		   <!-- excel
-		<dependency> 
-		  <groupId>org.apache.poi</groupId>
-		  <artifactId>poi</artifactId> 
-		  <version>5.2.0</version> 
-		</dependency> 
-		<dependency> 
-		  <groupId>org.apache.poi</groupId> 
-		  <artifactId>poi-ooxml</artifactId> 
-		  <version>5.2.0</version> 
-		</dependency>
+
+		<!-- csv -->
 		<dependency>
-		  <groupId>org.jxls</groupId>
-		  <artifactId>jxls-jexcel</artifactId>
-		  <version>1.0.9</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.8</version>
 		</dependency>
+
+
+		<!-- excel <dependency> <groupId>org.apache.poi</groupId> <artifactId>poi</artifactId> 
+			<version>5.2.0</version> </dependency> <dependency> <groupId>org.apache.poi</groupId> 
+			<artifactId>poi-ooxml</artifactId> <version>5.2.0</version> </dependency> 
+			<dependency> <groupId>org.jxls</groupId> <artifactId>jxls-jexcel</artifactId> 
+			<version>1.0.9</version> </dependency> <dependency> <groupId>org.dhatim</groupId> 
+			<artifactId>fastexcel-reader</artifactId> <version>0.15.3</version> </dependency> 
+			<dependency> <groupId>org.dhatim</groupId> <artifactId>fastexcel</artifactId> 
+			<version>0.15.3</version> </dependency> -->
+
 		<dependency>
-		    <groupId>org.dhatim</groupId>
-		    <artifactId>fastexcel-reader</artifactId>
-		    <version>0.15.3</version>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.5.9</version>
 		</dependency>
+
 		<dependency>
-		    <groupId>org.dhatim</groupId>
-		    <artifactId>fastexcel</artifactId>
-		    <version>0.15.3</version>
-		</dependency>
-		 -->		
-	
-		<dependency>
-		    <groupId>org.jxls</groupId>
-		    <artifactId>jxls-poi</artifactId>
-		    <version>2.9.0</version>
+			<groupId>org.jxls</groupId>
+			<artifactId>jxls-poi</artifactId>
+			<version>2.9.0</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.modelmapper</groupId>
-		    <artifactId>modelmapper</artifactId>
-		    <version>3.2.0</version>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.2.0</version>
 		</dependency>
-	    <dependency>
-	        <groupId>org.apache.poi</groupId>
-	        <artifactId>poi</artifactId>
-	        <version>5.2.0</version>
-	    </dependency>
-	    <dependency>
-	        <groupId>org.apache.poi</groupId>
-	        <artifactId>poi-ooxml</artifactId>
-	        <version>5.2.0</version>
-	    </dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
