--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,12 +16,18 @@ spring.jpa.properties.hibernate.cache.use_query_cache=true
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 
 #Datasource
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST:frparccsw}:${DATABASE_PORT:3306}/dashboard?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
-spring.datasource.username=dashboard
-spring.datasource.password=dashboard
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/dashboard?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.maxPoolSize=1
 spring.datasource.hikari.maximum-pool-size=1
+
+#Endpoints
+s3.endpoint=http://${S3_HOST:frparccsw}:${S3_PORT:9001}
+s3.username=${S3_USER:admin}
+s3.password=${S3_PASS:password}
+s3.bucketName=dashboard
 
 #Springboot admin
 spring.boot.admin.client.enabled=${SPRING_ADMIN:false}
