conexion denegada con bucketS3, no coge username /password en la ejecución

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,9 +25,9 @@ spring.datasource.hikari.maximum-pool-size=1
 
 #Endpoints
 s3.endpoint=http://${S3_HOST:frparccsw}:${S3_PORT:9001}
-s3.username=${S3_USER:admin}
-s3.password=${S3_PASS:password}
-s3.bucketName=dashboard
+s3.username=${S3_USER:dashboard}
+s3.password=${S3_PASS:dashboard}
+s3.bucket=dashboard
 
 #Springboot admin
 spring.boot.admin.client.enabled=${SPRING_ADMIN:false}
