--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #General
-spring.application.name=dashboard
-app.code=dashboard
+spring.application.name=capabilitymanager
+app.code=capabilitymanager
 app.sso.url=${SSO_URL:http://frparccsw/dev/sso/}
 spring.main.allow-circular-references=true
 server.error.include-message=always
@@ -16,18 +16,18 @@ spring.jpa.properties.hibernate.cache.use_query_cache=true
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 
 #Datasource
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST:frparccsw}:${DATABASE_PORT:3306}/dashboard?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
-spring.datasource.username=dashboard
-spring.datasource.password=dashboard
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST:frparccsw}:${DATABASE_PORT:3306}/capabilitymanager?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
+spring.datasource.username=capabilitymanager
+spring.datasource.password=capabilitymanager
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.maxPoolSize=1
 spring.datasource.hikari.maximum-pool-size=1
 
 #Endpoints
 s3.endpoint=http://${S3_HOST:frparccsw}:${S3_PORT:9001}
-s3.username=${S3_USER:dashboard}
-s3.password=${S3_PASS:dashboard}
-s3.bucket=dashboard
+s3.username=${S3_USER:capabilitymanager}
+s3.password=${S3_PASS:capabilitymanager}
+s3.bucket=capabilitymanager
 
 #Springboot admin
 spring.boot.admin.client.enabled=${SPRING_ADMIN:false}
