--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.jpa.properties.hibernate.cache.use_query_cache=true
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 
 #Datasource
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/capabilitymanager?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST:frparccsw}:${DATABASE_PORT:3306}/capabilitymanager?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
+spring.datasource.username=capabilitymanager
+spring.datasource.password=capabilitymanager
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.maxPoolSize=1
 spring.datasource.hikari.maximum-pool-size=1
