--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,8 @@ management.security.enabled=false
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.endpoint.logfile.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 logging.file.name=${SPRING_ADMIN_FILE:}
 
