--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,8 @@ server.error.include-message=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.cache.use_second_level_cache=true 
-spring.jpa.properties.hibernate.cache.use_query_cache=true 
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.use_query_cache=true
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 
 #Datasource
@@ -29,21 +28,13 @@ s3.username=${S3_USER:capabilitymanager}
 s3.password=${S3_PASS:capabilitymanager}
 s3.bucket=capabilitymanager
 
-#Springboot admin
-spring.boot.admin.client.enabled=${SPRING_ADMIN:false}
-spring.boot.admin.client.auto-registration=true
-spring.boot.admin.client.url=http://${SPRING_ADMIN_URL:localhost:9999}/
-spring.boot.admin.client.username=${SPRING_ADMIN_USER:user}
-spring.boot.admin.client.password=${SPRING_ADMIN_PASSWORD:password}
 
-management.security.enabled=false
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
-management.endpoint.logfile.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-logging.file.name=${SPRING_ADMIN_FILE:}
 
-spring.boot.admin.client.instance.metadata.appCode=${app.code}
-spring.boot.admin.client.instance.metadata.version=@project.version@
+#Log
+logging.level.root=WARN
+logging.level.com.ccsw.capabilitymanager=DEBUG
+logging.level.com.ccsw.capabilitymanager.config.security=WARN
+logging.level.org.hibernate.SQL=DEBUG
