--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 	<properties>
 		<java.version>18</java.version>
 		<packaging.type>jar</packaging.type>
+		<mariadb.version>2.7.1</mariadb.version>
 	</properties>
 
 	<dependencies>
@@ -37,9 +38,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.30</version>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<scope>runtime</scope>
+			<version>${mariadb.version}</version>
 		</dependency>
 
 		<dependency>
