--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,11 @@ server.error.include-message=always
 #Database
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.cache.use_second_level_cache=true
-spring.jpa.properties.hibernate.cache.use_query_cache=true
-spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
-
-#Datasource
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://${DATABASE_HOST:frparccsw}:${DATABASE_PORT:3306}/capabilitymanager?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
 spring.datasource.username=capabilitymanager
 spring.datasource.password=capabilitymanager
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.maxPoolSize=1
 spring.datasource.hikari.maximum-pool-size=1
 
