Gestion de fichero de roles en segundo plano

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #General
 spring.application.name=capabilitymanager
 app.code=capabilitymanager
-app.sso.url=${SSO_URL:http://frparccsw/dev/sso/}
+#app.sso.url=${SSO_URL:http://frparccsw/dev/sso/}
+app.sso.url=${SSO_URL:http://cca.capgemini.com/dev/sso/}
 spring.main.allow-circular-references=true
 server.error.include-message=always
 
@@ -10,7 +11,8 @@ server.error.include-message=always
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST:frparccsw}:${DATABASE_PORT:3306}/capabilitymanager?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
+#spring.datasource.url=jdbc:mysql://${DATABASE_HOST:frparccsw}:${DATABASE_PORT:3306}/capabilitymanager?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST:cca.capgemini.com}:${DATABASE_PORT:3306}/capabilitymanager?connectTimeout=10000&socketTimeout=10000&autoReconnect=true
 spring.datasource.username=capabilitymanager
 spring.datasource.password=capabilitymanager
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -18,7 +20,8 @@ spring.datasource.maxPoolSize=1
 spring.datasource.hikari.maximum-pool-size=1
 
 #Endpoints
-s3.endpoint=http://${S3_HOST:frparccsw}:${S3_PORT:9001}
+#s3.endpoint=http://${S3_HOST:frparccsw}:${S3_PORT:9001}
+s3.endpoint=http://${S3_HOST:cca.capgemini.com}:${S3_PORT:9001}
 s3.username=${S3_USER:capabilitymanager}
 s3.password=${S3_PASS:capabilitymanager}
 s3.bucket=capabilitymanager
